# ProgrammingPractice

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cpp_quiz_log.md
.claude/: settings.local.json
exercises/algorithms/01_two_sum/: problem.md  solution.cpp  solution.h  test.cpp
exercises/algorithms/02_merge_sorted/: problem.md  solution.cpp  solution.h  test.cpp
exercises/algorithms/03_balanced_parens/: problem.md  solution.cpp  solution.h  test.cpp
exercises/bug_hunts/01_string_splitter/: problem.md  solution.cpp  solution.h  test.cpp
exercises/bug_hunts/02_linked_list/: problem.md  solution.cpp  solution.h  test.cpp
exercises/bug_hunts/03_binary_search/: problem.md  solution.cpp  solution.h  test.cpp
exercises/bug_hunts/04_kv_store/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/01_sum_matrix/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/02_string_building/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/03_dedup/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/04_sliding_window_sum/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/05_pair_sum_count/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/06_range_sum_queries/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/07_fib/: problem.md  solution.cpp  solution.h  test.cpp
exercises/performance/08_count_primes/: problem.md  solution.cpp  solution.h  test.cpp
include/practice/: test.h  timer.h
